Fixed calendar grid and scroll bar causing page to shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,10 @@
     }
 }
 
+html {
+    overflow-y: scroll;
+}
+
 .menu {
     @apply overflow-y-auto;
 }
