--- a/app/lessons/lessons.module.css
+++ b/app/lessons/lessons.module.css
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     min-height: 800px;
-    width: 100%;
     padding-bottom: 50px;
 }
 
@@ -52,7 +51,7 @@
 .dayOfWeekLabelContainer {
     display: grid;
     grid-template-columns: repeat(7, 156px);
-    grid-template-rows: 30px;
+    grid-template-rows: 28px;
     text-align: center;
 }
 
